Fix sidebar jumping to top
closes #94

--- a/source/stylesheets/layout.css.scss
+++ b/source/stylesheets/layout.css.scss
@@ -407,10 +407,7 @@ aside {
   width: 12.666667%;
   z-index: 200;
 
-  &.expand {
-    right: 0;
-    overflow: scroll;
-  }
+  &.expand { right: 0; }
 
   > a {
     background: url(#{'{{ "hamburger.png" | theme_image_url }}'}) no-repeat left top;
