--- a/source/stylesheets/media_queries.css.scss
+++ b/source/stylesheets/media_queries.css.scss
@@ -547,6 +547,8 @@
 	
 	aside > a { top: 18px;}
 
+  aside.expand { overflow: scroll; }
+
 	.content { width: 100%; }
 
 	.light_cart { margin-left: -20px; }
